--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   flutter_image_compress: ^1.1.3
   http: ^0.13.5
   typed_data: ^1.3.2
+  image_editor_plus: ^0.1.8
+  flutter_image_editor: ^2.1.0
 
 dev_dependencies:
   flutter_test:
