--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   typed_data: ^1.3.2
   image_editor_plus: ^0.1.8
   flutter_image_editor: ^2.1.0
+  share_plus: ^7.0.2
 
 dev_dependencies:
   flutter_test:
