--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   image_editor_plus: ^0.1.8
   flutter_image_editor: ^2.1.0
   share_plus: ^7.0.2
+  get_it: ^7.6.0
 
 dev_dependencies:
   flutter_test:
