--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_image_editor: ^2.1.0
   share_plus: ^7.0.2
   get_it: ^7.6.0
+  shared_preferences: ^2.1.2
 
 dev_dependencies:
   flutter_test:
