--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   share_plus: ^7.0.2
   get_it: ^7.6.0
   shared_preferences: ^2.1.2
+  video_player: ^2.7.0
 
 dev_dependencies:
   flutter_test:
@@ -74,8 +75,7 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/landscape.png
+  # assets:
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
