--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,18 +36,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  image_picker: ^0.8.7
+  image_picker: ^1.1.1
   palette_generator: ^0.3.3+2
-  image: ^3.0.2
+  image: ^4.2.0
   path_provider: ^2.0.13
   flutter_color_models: ^1.3.3+2
-  gallery_saver: ^2.3.2
-  flutter_image_compress: ^1.1.3
-  http: ^0.13.5
+  saver_gallery: ^3.0.5
+  flutter_image_compress: ^2.3.0
+  http: ^1.2.1
   typed_data: ^1.3.2
-  image_editor_plus: ^0.1.8
+  image_editor_plus: ^1.0.6
   flutter_image_editor: ^2.1.0
-  share_plus: ^7.0.2
+  share_plus: ^9.0.0
   get_it: ^7.6.0
   shared_preferences: ^2.1.2
   video_player: ^2.7.0
